--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,12 @@ jobs:
       - name: get SDK
         uses: wei/wget@v1
         with:
-          args: -O trimui-sdk.tar.gz https://github.com/joyrider3774/sdks/releases/latest/download/trimui-sdk.tar.gz
+          args: -O trimui-sdk.tar.gz https://github.com/joyrider3774/sdks/releases/latest/download/rg35xx_plus.tgz
 
       - name: setup SDK
         run: |
-          tar -xzvf ./trimui-sdk.tar.gz
-          sudo mv ./trimui-sdk /opt/
+          tar -xzvf ./rg35xx_plus.tgz
+          sudo mv ./rg35xx /opt/
 
       - if: ${{ matrix.buildtype == 'playdate'}}
         name: Checkout Playdate SDL2 Api Sources
