--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
       
       - name: copy metadata
         run: |
-          cp -Rf "tmp/metadata/rg35xxplusbatocera/" "./artifact_dir/"
+          cp -f "tmp/metadata/rg35xxplusbatocera/*" "./artifact_dir/"
       
       
       - if: ${{ matrix.binarycopy != ''}}
