--- a/.github/workflows/build_aarch64.yml
+++ b/.github/workflows/build_aarch64.yml
@@ -88,7 +88,7 @@ jobs:
       - name: prepare artificat directory
         run: |
           mkdir artifact_dir
-          mkdir artifact_dir/.${{ matrix.output }}"
+          mkdir "artifact_dir/.${{ matrix.output }}"
      
       - if: ${{ matrix.buildtype == 'playdate'}}
         name: Move Source Folder
