fix playdate game packaging

--- a/.github/workflows/build_aarch64.yml
+++ b/.github/workflows/build_aarch64.yml
@@ -92,7 +92,7 @@ jobs:
       - if: ${{ matrix.buildtype == 'playdate'}}
         name: Move Source Folder
         run: |
-          mv ./Source "./artifact_dir/.${{ matrix.output }}"
+          cp -Rf ./Source/. "./artifact_dir/.${{ matrix.output }}/"
       
       - name: create ${{matrix.output}}.sh general stuff
         run: |
