--- a/.github/workflows/build_aarch64.yml
+++ b/.github/workflows/build_aarch64.yml
@@ -127,5 +127,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           include-hidden-files: true
-          name: ${{ matrix.output }} - RG35XX_Plus_Batocera_cfw_aarch64
+          name: ${{ matrix.output }} - Muos_cfw_aarch64
           path: artifact_dir/
