--- a/.github/workflows/build_aarch64.yml
+++ b/.github/workflows/build_aarch64.yml
@@ -104,7 +104,7 @@ jobs:
           
           echo "SETUP_SDL_ENVIRONMENT"  >> "./artifact_dir/${{matrix.output}}.sh"
          
-          echo "SET_VAR \"system\" \"foreground_process\" \"${{ matrix.output }}\"" >> "./artifact_dir/${{matrix.output}}.sh"
+          echo "SET_VAR \"system\" \"foreground_process\" \"${{ matrix.binary }}\"" >> "./artifact_dir/${{matrix.output}}.sh"
           
           echo "GAMEFOLDER=\$(dirname \"\$0\")/.${{matrix.output}}" >> "./artifact_dir/${{matrix.output}}.sh"
           echo "cd \"\$GAMEFOLDER\"" >> "./artifact_dir/${{matrix.output}}.sh"
